# simplex

./: .gitignore  CMakeLists.txt  README.md  lp.cpp  lp.h  main.cpp  matrixutil.h
